--- a/styles.css
+++ b/styles.css
@@ -1,46 +1,71 @@
 @import 'assets/fonts.css';
 @import 'assets/variables.css';
+@import 'assets/navbar.css';
 
+* {
+    box-sizing: border-box;
+    font-family: "Syne-Regular", sans-serif;
+}
+  
 html {
     width: 100%;
     height: 100%;
+    overflow-x: hidden;
+}
+
+body.light_mode{
+    --background: var(--white);
+    --lightBackground: var(--lightgray);
+    --text: var(--textLightMode);
+    --secondaryText: var(--textSecondarytLightMode);
+    --color1: var(--salmon);
+    --color2: var(--lightsalmon);
+}
+
+body.dark_mode{
+    --background: var(--black);
+    --lightBackground: var(--darkslategray);
+    --text: var(--textDarkMode);
+    --secondaryText: var(--textSecondarytDarkMode);
+    --color1: var(--cadetblue);
+    --color2: var(--steelblue);
 }
 
 body {
-    margin: 0;
     width: 100%;
     min-height: 100vh;
-    overflow: hidden;
+    margin: 0;
+    background: var(--background);
+    color: var(--text);
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    overflow-x: hidden;
 }
 
-h1 {
-    font-family: 'Syne-Bold';
-    font-size: 3rem;
-    margin: 10px;
-    text-align: center;
+@media (max-width: 767px) {
+    body {
+        max-width: 100%;
+    }
 }
 
-p {
-    text-align: center;
-    font-family: 'Syne-Regular';
-    font-size: 1rem;
+h1, h2, h3, h4, h1 *, h2 *, h3 *, h4 * {
+    font-family: "Syne-Bold", sans-serif;
 }
 
-#cursor {
+section {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+}
+
+#leftLine {
     position: absolute;
     z-index: 9999;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background-color: var(--salmon);
-    transform: translate(-50%, -50%);
-    transition: background-color 0.3s;
-
-    &.click {
-        background-color: var(--lightsalmon);
-    }
+    top: 0;
+    left: var(--leftLineOffset);
+    width: var(--lineThickness);
+    height: 100%;
+    background: var(--lightBackground);
 }
