--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 @import 'assets/fonts.css';
 @import 'assets/variables.css';
 @import 'assets/navbar.css';
+@import 'assets/home_section.css';
 
 * {
     box-sizing: border-box;
